[gd_scene load_steps=2 format=2]

[ext_resource path="res://Blinker.gd" type="Script" id=1]

[node name="Blinker" type="Node"]
script = ExtResource( 1 )

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DurationTimer" type="Timer" parent="."]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
